further review findings
Signed-off-by: Bernd Weymann <bernd.weymann@gmail.com>